<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Информация" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_menu_camera"
            android:title="Датчик" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Камера" />
        <item
            android:id="@+id/nav_microphone"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Микрофон" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_launcher_background"
            android:title="Профиль" />
        <item
            android:id="@+id/nav_filework"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Работа с файлами" />

        <item
            android:id="@+id/networkFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Данные из сети" />

    </group>
</menu>